--- a/TestNDemo/index.html
+++ b/TestNDemo/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
   <title>JQL CLASSFREE demo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/vs2015.min.css">
-  <!--Note: styling for this document is dynamic (see style#JQLCustomCSS in <head>)-->
+  <link rel="stylesheet" href="https://kooi.dev/SDN/prism.min.css">
+  <script src="https://kooi.dev/SDN/prism.min.js"></script>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/simply-beautiful@latest"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
 <script src="./script.js" type="module"></script>
 </body>
 </html>
