--- a/TestNDemo/index.html
+++ b/TestNDemo/index.html
@@ -6,6 +6,6 @@
     <script src="https://kooi.dev/SDN/prism.min.js"></script>
   </head>
   <body>
-    <script src="./script.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
