--- a/TestNDemo/index.html
+++ b/TestNDemo/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>JQL CLASSFREE demo</title>
-    <link rel="stylesheet" href="https://kooi.dev/SDN/prism.min.css">
-    <script src="https://kooi.dev/SDN/prism.min.js"></script>
+    <link rel="stylesheet" href="//kooi.dev/SDN/prism.min.css">
+    <script src="//kooi.dev/SDN/prism.min.js"></script>
   </head>
   <body>
     <script src="index.js" type="module"></script>
